--- a/reference/redirects.v3.yml
+++ b/reference/redirects.v3.yml
@@ -168,33 +168,33 @@ paths:
       parameters:
         - name: id
           in: query
-          description: Filters results by redirect import/export job ID.
+          description: Filters results by Redirect Import-Export job ID.
           style: form
           explode: false
           schema:
             type: string
         - name: type
           in: query
-          description: Filters results by redirect import/export job type.
+          description: Filters results by the type of the Redirect Import-Export job.
           style: form
           explode: false
           schema:
             $ref: '#/components/schemas/ImportExportJobType'
         - name: status
           in: query
-          description: Filters results by redirect import/export job status.
+          description: Filters results by the status of the Redirect Import-Export job.
           style: form
           explode: false
           schema:
             $ref: '#/components/schemas/ImportExportJobStatus'
         - name: limit
           in: query
-          description: Controls the number of items to return per page.
+          description: Determines the number of items returned per page.
           schema:
             type: integer
         - name: page
           in: query
-          description: Specifies the page number in a limited (paginated) list of items. Used to paginate large collections.
+          description: Specifies the page number to return when the number of items returned exceeds the page limit. Used to paginate large collections.
           schema:
             type: integer
       responses:
@@ -218,7 +218,7 @@ paths:
       tags:
         - Redirect Import-Export
       summary: Create Redirects Export Job
-      description: Creates a new 301 Redirects Export job.
+      description: Creates a new 301 Redirects export job.
       operationId: createRedirectExportJob
       parameters:
         - $ref: '#/components/parameters/ContentType'
@@ -232,14 +232,14 @@ paths:
                   type: integer
                   nullable: true
                   default: null
-                  description: The site ID to export redirects for. If not provided, all redirects for all sites will be exported.
+                  description: The site ID for which you wish to export redirects. If no site ID is provided, the request exports all redirects for all sites.
                 redirect_ids:
                   type: array
                   items:
                     type: integer
                   default: []
-                  description: List of redirect IDs to export. If not provided, all redirects for the given site selection will be exported.
-              description: 'Data necessary to create a new 301 Redirects Export job.'
+                  description: A list of the redirect IDs you wish to export. If no redirect IDs are provided, the request exports all redirects for the given site selection.
+              description: Data necessary to create a new 301 Redirects export job.
         required: true
       responses:
         '201':
@@ -253,9 +253,9 @@ paths:
                     type: string
                     example: ab1c2de3-f4gh-5678-i90j-klm12n345o67
         '429':
-          description: Your store already has an active import or export job running.
+          description: Your store already has an active Redirects import or export job running.
         '409':
-          description: There are no redirects to export from your store with the provided parameters.
+          description: No Redirects in your store meet the criteria in your request.
   '/storefront/redirects/imex/import':
     parameters:
       - $ref: '#/components/parameters/Accept'
@@ -263,7 +263,7 @@ paths:
       tags:
         - Redirect Import-Export
       summary: Create Redirects Import Job
-      description: Creates a new 301 Redirects Import job.
+      description: Creates a new 301 Redirects import job.
       operationId: createRedirectImportJob
       parameters:
         - $ref: '#/components/parameters/ContentTypeFormData'
@@ -274,12 +274,12 @@ paths:
               type: object
               properties:
                 import_file:
-                  description: The CSV file containing 301 Redirects to be imported.
+                  description: A CSV file containing a list of Redirects to be imported.
                   type: string
                   format: binary
               required:
                 - import_file
-              description: 'Data necessary to create a new 301 Redirects Import job.'
+              description: Data necessary to create a new 301 Redirects import job.
         required: true
       responses:
         '201':
@@ -297,7 +297,7 @@ paths:
         '413':
           description: The provided file is too large. The maximum file size is 20MB.
         '429':
-          description: Your store already has an active import or export job running.
+          description: Your store already has an active Redirects import or export job running.
   '/storefront/redirects/imex/export/{uuid}/events':
     parameters:
       - $ref: '#/components/parameters/AcceptEventStream'
@@ -354,7 +354,7 @@ paths:
       operationId: getRedirectExportDownload
       responses:
         '200':
-          description: The exported redirects CSV data
+          description: The exported Redirects in CSV format
           content:
             text/csv:
               schema:
@@ -409,7 +409,7 @@ components:
         default: 'text/csv'
     ImportExportIdParam:
       name: uuid
-      description: The import/export job identifier.
+      description: The import-export job identifier.
       in: path
       required: true
       schema:
@@ -491,7 +491,7 @@ components:
       type: array
       items:
         type: object
-        description: 'Detail of an error that occurred during an import job.'
+        description: Detail of an error that occurred during an import job.
         properties:
           row:
             type: integer
@@ -499,7 +499,7 @@ components:
             type: string
     301RedirectImportExportJobRead:
       type: object
-      description: 'Full detail of a Redirect Import/Export job.'
+      description: Full detail of a Redirect Import-Export job.
       properties:
         id:
           type: string
