add more detail about schemas

--- a/reference/redirects.v3.yml
+++ b/reference/redirects.v3.yml
@@ -414,6 +414,7 @@ components:
       required: true
       schema:
         type: string
+        format: uuid
   schemas:
     Error:
       type: object
@@ -495,6 +496,7 @@ components:
         properties:
           row:
             type: integer
+            description: The row in the import CSV where the error occurred.
           message:
             type: string
     301RedirectImportExportJobRead:
@@ -503,23 +505,32 @@ components:
       properties:
         id:
           type: string
+          format: uuid
+          description: The Import-Export job ID.
         type:
           $ref: '#/components/schemas/ImportExportJobType'
         status:
           $ref: '#/components/schemas/ImportExportJobStatus'
         completed_items:
           type: integer
+          description: The number of items that were successfully imported or exported.
         failed_items:
           type: integer
+          description: The number of items that were not successfully imported or exported.
         total_items:
           type: integer
+          description: The number of items in the import or export job.
         errors:
           $ref: '#/components/schemas/ImportErrors'
         created_at:
-          description: 'The date-time that the import/export job was created, formatted as an [RFC-3339](https://www.ietf.org/rfc/rfc3339.txt) string.'
+          type: string
+          format: date-time
+          description: 'The date-time that the import-export job was created, formatted as an [RFC-3339](https://www.ietf.org/rfc/rfc3339.txt) string.'
           example: '2022-01-04T04:15:50.000Z'
         completed_at:
-          description: 'The date-time that the import/export job was completed, formatted as an [RFC-3339](https://www.ietf.org/rfc/rfc3339.txt) string.'
+          type: string
+          format: date-time
+          description: 'The date-time that the import-export job was completed, formatted as an [RFC-3339](https://www.ietf.org/rfc/rfc3339.txt) string.'
           example: '2022-01-04T04:15:50.000Z'
     MetaPaginationObject:
       type: object
